# ProyectoEquipo5

./: .gitignore  README.md
proyecto_clean_csv/: main.py  pyproject.toml  schema_generator.py
proyecto_clean_csv/examples/: ventas_cafe.csv
proyecto_clean_csv/src/module/cleaners/: __init__.py  cleaner_dispatcher.py  cleaners.py  protocol_cleaner.py  remove_duplicates.py  remove_nulls.py  specific_cleaners.py
proyecto_clean_csv/src/module/data_models/: config.json  schema.py
proyecto_clean_csv/src/module/data_models/transform/: __init__.py  fill_data.py
proyecto_clean_csv/src/module/pipelines/: __init__.py  orchestrator.py
proyecto_clean_csv/src/module/read/: __init__.py  csv_reader_selector.py  reader.py
proyecto_clean_csv/src/module/reports/: __init__.py  clean_csv_exporter.py  decorators.py  logging_config.py  plot_generator.py
proyecto_clean_csv/src/module/transforms/: __init__.py  fechas.py  item.py  tercios_del_año.py  weekday.py  year_third.py
proyecto_clean_csv/src/module/validators/: __init__.py  base_validator.py  specific_validators.py
proyecto_clean_csv/src/modulo/lectura/: __init__.py  reader.py
proyecto_clean_csv/src/modulo/limpiadores/: __init__.py  limpieza_duplicadosv.py  limpieza_nulos.py
proyecto_clean_csv/src/modulo/modelos_datos/configuracion/: __init__.py  rellenar_datos.py
proyecto_clean_csv/src/modulo/reportes/: decoradores.py
proyecto_clean_csv/src/modulo/utils/: __init__.py
proyecto_clean_csv/tests/: test_cleaners.py  test_exporter.py  test_readers.py  test_transforms.py  test_validators.py
